--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@
     background-image: url(images/japan-bg.jpeg);
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .favorite-sites ul {
